# OilTrace

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: backend.yml  contract.yml  test.yml
backend/: requirements-dev.txt
backend/app/: database.py  dependencies.py  main.py  models.py
backend/app/abi/: OilTrace.json
backend/app/routes/: auth.py  collections.py  points.py
backend/app/services/: blockchain.py  blockchain_poller.py  partners.py  points.py
backend/tests/: conftest.py  test_auth_middleware.py  test_blockchain_service.py  test_classification.py  test_collection_api.py  test_partners.py  test_points.py  test_push_notifications.py  test_realtime.py  test_rls_boundaries.py  test_routes.py
contract/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contract/contracts/: OilTrace.sol
contract/scripts/: check-balance.ts  deploy.ts
contract/test/: OilTrace.test.ts
docs/: README.md  test.md
docs/plan/: 01-system-architecture.md  02-database-schema.md  03-smart-contract.md  04-api-endpoints.md  05-security.md  06-hardware-design.md  07-mobile-app.md  08-route-optimization.md  09-tpm-classification.md  10-points-system.md  11-government-compliance.md  12-cost-breakdown.md  13-implementation-roadmap.md  14-risks-questions.md
