[project]
name = "oiltrace"
version = "0.1.0"
description = "Used cooking oil collection system for Philippine karinderyas"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = [
    "backend/tests",
]
markers = [
    "slow: Tests that take >30s to complete",
]
filterwarnings = ["ignore::DeprecationWarning"]
